# Radboud-sudoku

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
resources/sudokus/: volkskrant_24_08_2023.csv
src/radboudsudoku/: __about__.py  __main__.py  smtbasedsolver.py  sudoku.py
src/radboudsudoku/cli/: __init__.py
tests/: __init__.py
